# libtorchdart

./: .gitignore  .gitignore.swp  Makefile  README.md  pubspec.yaml  reproduce_crash.dart
.agent/rules/: cmakedir.md
example/: clip.dart  libtorchdart_example.dart  safetensor_example.dart  safetensor_sdv15.dart  scratch.dart  stable_diffusion.dart  stable_diffusion_v1_5.dart  vae_decode.dart
example/clip/: clip_tokenize.dart
example/generator/: default.dart
example/init/: kaiming_uniform.dart
example/nn/: conv2d.dart
example/nn2d/: conv2d.dart  conv2d_transposed.dart  resnet2d.dart
example/safetensor/: safetensor.dart  safetensor_example.dart
example/tensor/: datatype_get.dart  expand.dart  pad.dart  print.dart  split.dart  split_equally.dart
lib/: libtorchdart.dart  tensor.dart
lib/src/: libtorchdart_base.dart
lib/src/autoencoder/: autoencoder.dart  vae.dart  (+2 more)
models/: .gitignore
models/diffusion/: .gitignore  Makefile
models/tokenizer/: .gitignore  Makefile
test/: cuda_test.dart  mps_test.dart
test/autoencoder/: blocks_test.dart  down_encoder_block_2d_test.dart
test/clip/: clip_test.dart
test/device/: autocast_test.dart  device_test.dart
test/init/: kaiming_uniform_test.dart
test/nn/: embedding_crash_test.dart
test/nn2d/: conv2d_test.dart  conv2d_transposed_test.dart  resnet2d_test.dart
test/tensor/: arange_test.dart  arithmetic_test.dart  baddbmm_test.dart  bmm_test.dart  clone_test.dart  copy_test.dart  device_test.dart  element_size_test.dart  finfo_test.dart  flatten_test.dart  from_blob_test.dart  from_test.dart  index.dart  is_contiguous_test.dart  math_functions_test.dart  norm_test.dart  randint_test.dart  slice_full_test.dart  squeeze_unsqueeze_test.dart  stack_select_test.dart  to_test.dart  tril_test.dart
test/transformers/: decision_transformer_test.dart  gpt2_test.dart
test/unet/: downsample_2d_test.dart  unet2d_condition_model_test.dart  upsample_2d_test.dart
test/vae/: blocks_test.dart
test_gen/: generate.sh  requirements.txt  setup.sh
test_gen/gpt_oss/: rotary_embedding.py  rotary_embedding_load.py
test_gen/init/: kaiming_uniform_testgen.py
test_gen/nn2d/: conv2d.py  conv2d_transpose_test.py
test_gen/resnet/: resnet_sd15_unet.py  resnet_sd15_vae.py  resnet_testgen.py
test_gen/vae/: vae.py
torchffi/: .gitignore  CMakeLists.txt  Makefile  build.sh
torchffi/example/: Makefile  _CMakeLists.txt  main.c  source_me.sh
torchffi/include/: torch_ffi.h
torchffi/pytorch/: safetensors.py
torchffi/src/: CMakeLists.txt  cuda.cpp  device.cpp  finfo.cpp  generator.cpp  mps.cpp  tensor.cpp  torch_ffi.cpp  xpu.cpp
torchffi/src/include/: torch_ffi.h
(+84 files in other folders)
